--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Luke's first attempt at using git and GitHub- it seems like a useful thing to know.
+My first attempt at using git and GitHub- it seems like a useful thing to know.
 
 I'm aiming to take part in the Advent of Code challenges this year, and will put my code for them here.
