--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-My first attempt at using git and GitHub- it seems like a useful thing to know.
-
-I'm aiming to take part in the Advent of Code challenges this year, and will put my code for them here.
+Code I write to solve the annual Advent of Code problems at adventofcode.com.
