--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Code I write to solve the annual Advent of Code problems at adventofcode.com.
 
-Will split off the chatgpt stuff to another repository in the future.
+Will split off the chatgpt stuff to another repository in the future (if openai don't delete my account first)
