--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Code I write to solve the annual Advent of Code problems at adventofcode.com.
+
+TO DO:
+Add 2023 code.
+Remove all inputs files.
+Restrucure directories.
+Write script to get all inputs.
