--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Code I write to solve the annual Advent of Code problems at adventofcode.com.
 TO DO:
 Remove all inputs files.
 Restrucure directories.
-Write script to get all inputs.
+Write script to get all inputs. << this one's kind of done, believe it or not.
